--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Zui Korean DVD Shop</title>
+    <title>18610108/Zulfi Maulidah</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Zui Korean DVD Shop</div>
+      <div class="header-logo">18610108/Zulfi Maulidah</div>
       <div class="header-list">
         <ul>
-          <li>Romance</li>
-          <li>Action</li>
-          <li>Fantasy</li>
+          <li>Moderasi Beragama</li>
+          <li>Pencegahan Penularan COVID</li>
+          <li>Pendidikan</li>
         </ul>
       </div>
     </div>
 
     <div class="main">
       <div class="copy-container">
-        <h1>HELLO KDRAMA LOVERS<span><3</span></h1>
-        <h2>Yuk perbanyak koleksi DVD DRAKORmu! </h2>
+        <h1>KKM-DR 2020<span><=</span></h1>
+        <h2>Ds. Pandanajeng Kec.Tumpang Kab. Malang </h2>
       </div>
       
       <div class="contents">
-        <h3 class="section-title">Best Seller</h3>
+        <h3 class="section-title">TIMELINE</h3>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/ZulfiMaulidah.github.io/master/FB_IMG_1601190899129.jpg" height="250px" width="200px">
           <p>Itaewon Class</p>
