--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="main">
       <div class="copy-container">
-        <h1>KKM-DR 2020<span><=</span></h1>
+        <h1>KKM-DR 2020<span>I^I</span></h1>
         <h2>Ds. Pandanajeng Kec.Tumpang Kab. Malang </h2>
       </div>
       
