--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       <div class="contents">
         <h3 class="section-title">TIMELINE</h3>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/ZulfiM7/ZulfiMaulidah.github.io/master/FB_IMG_1601190899129.jpg" height="250px" width="200px">
-          <p>Itaewon Class</p>
+          <p>Minggu 1 Moderasi Beragama</p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/ZulfiMaulidah.github.io/master/FB_IMG_1601191387297.jpg" height="250px" width="200px">
