--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
       <div class="header-logo">18610108/Zulfi Maulidah</div>
       <div class="header-list">
         <ul>
-          <li>Moderasi Beragama</li>
-          <li>Pencegahan Penularan COVID</li>
-          <li>Pendidikan</li>
+          <li>Moderasi Beragama dan Pencegahan Penularan COVID-19</li>
         </ul>
       </div>
     </div>
