--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="contents">
         <h3 class="section-title">TIMELINE</h3>
         <div class="contents-item">
+          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Moderasi%20Beragama.jpg" height="250px" width="200px">
           <p>Minggu 1 Moderasi Beragama</p>
         </div>
         <div class="contents-item">
