--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         <h3 class="section-title">TIMELINE</h3>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Moderasi%20Beragama.jpg" height="250px" width="200px">
-          <p>Minggu 1 Moderasi Beragama</p>
+          <p>Minggu Ke-1 Moderasi Beragama</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/ZulfiM7/ZulfiMaulidah.github.io/master/FB_IMG_1601191387297.jpg" height="250px" width="200px">
-          <p>Crash Landing On You</p>
+          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/STOP%20COVID.jpg" height="250px" width="200px">
+          <p>Minggu Ke-2 Pencegahan Penularan COVID-19</p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/ZulfiMaulidah.github.io/master/FB_IMG_1601191831415.jpg" height="250px" width="200px">
-          <p>W</p>
+          <p>Minggu Ke-3 Perbaikan Pendidikan</p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/ZulfiMaulidah.github.io/master/Screenshot_20200927_144230.jpg" height="250px" width="200px">
-          <p>Record Of Youth</p>
+          <p>Minggu Ke-4 Perbaikan Ekonomi</p>
         </div>
       </div>
       
