--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>Minggu Ke-2 Pencegahan Penularan COVID-19</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/ZulfiM7/ZulfiMaulidah.github.io/master/FB_IMG_1601191831415.jpg" height="250px" width="200px">
+          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Pendidikan.jpg" height="250px" width="200px">
           <p>Minggu Ke-3 Perbaikan Pendidikan</p>
         </div>
         <div class="contents-item">
