--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p>Minggu Ke-3 Perbaikan Pendidikan</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/ZulfiM7/ZulfiMaulidah.github.io/master/Screenshot_20200927_144230.jpg" height="250px" width="200px">
+          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Ekonomi.jpeg" height="250px" width="200px">
           <p>Minggu Ke-4 Perbaikan Ekonomi</p>
         </div>
       </div>
@@ -59,11 +59,11 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">Zui Korean DVD Shop</div>
+      <div class="footer-logo">18610108/Zulfi Maulidah</div>
       <div class="footer-list">
         <ul>
           <li>About</li>
-          <li>Jobs</li>
+          <li>Join</li>
           <li>Contact us</li>
         </ul>
       </div>
