--- a/index.html
+++ b/index.html
@@ -25,19 +25,23 @@
         <h3 class="section-title">TIMELINE</h3>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Moderasi%20Beragama.jpg" height="200px" width="150px">
-          <p>Minggu Ke-1 Moderasi Beragama</p>
+          <p>Minggu Ke-1 
+            Moderasi Beragama</p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/STOP%20COVID.jpg" height="200px" width="150px">
-          <p>Minggu Ke-2 Pencegahan Penularan COVID-19</p>
+          <p>Minggu Ke-2 
+            Pencegahan Penularan COVID-19</p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Pendidikan.jpg" height="200px" width="150px">
-          <p>Minggu Ke-3 Perbaikan Pendidikan</p>
+          <p>Minggu Ke-3 
+            Perbaikan Pendidikan</p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Ekonomi.jpeg" height="200px" width="150px">
-          <p>Minggu Ke-4 Perbaikan Ekonomi</p>
+          <p>Minggu Ke-4 
+            Perbaikan Ekonomi</p>
         </div>
       </div>
       
