--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <h3 class="section-title">TIMELINE</h3>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Moderasi%20Beragama.jpg" height="200px" width="150px">
-          <p>Minggu Ke-1 
-            Moderasi Beragama</p>
+          <p>Minggu Ke-1</p>
+          <p>Moderasi Beragama</p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/STOP%20COVID.jpg" height="200px" width="150px">
-          <p>Minggu Ke-2 
-            Pencegahan Penularan COVID-19</p>
+          <p>Minggu Ke-2 Pencegahan Penularan COVID-19</p>
+          
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Pendidikan.jpg" height="200px" width="150px">
