--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
       <div class="contents">
         <h3 class="section-title">TIMELINE</h3>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Moderasi%20Beragama.jpg" height="200px" width="150px">
+          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Moderasi%20Beragama.jpg" height="250px" width="200px">
           <p>Minggu Ke-1</p>
           <p>Moderasi Beragama</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/STOP%20COVID.jpg" height="200px" width="150px">
-          <p>Minggu Ke-2 Pencegahan Penularan COVID-19</p>
-          
+          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/STOP%20COVID.jpg" height="250px" width="200px">
+          <p>Minggu Ke-2</p>
+          <p>Pencegahan Penularan COVID-19</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Pendidikan.jpg" height="200px" width="150px">
-          <p>Minggu Ke-3 
-            Perbaikan Pendidikan</p>
+          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Pendidikan.jpg" height="250px" width="200px">
+          <p>Minggu Ke-3</p> 
+          <p>Perbaikan Pendidikan</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Ekonomi.jpeg" height="200px" width="150px">
-          <p>Minggu Ke-4 
-            Perbaikan Ekonomi</p>
+          <img src="https://raw.githubusercontent.com/ZulfiM7/UTSZulfi-/main/Ekonomi.jpeg" height="250px" width="200px">
+          <p>Minggu Ke-4</p> 
+          <p>Perbaikan Ekonomi</p>
         </div>
       </div>
       
